fix header alignment

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,7 +9,6 @@
   opacity: 0;
   visibility: hidden;
   transition: all 300ms;
-  /*mix-blend-mode: lighten;*/
 
   &.visible {
     opacity: 1;
@@ -21,7 +20,7 @@
   display: grid;
   grid-column: main;
   grid-template-columns: 1fr 1fr;
-  margin-top: 1.5rem;
+  margin-top: 3rem;
 }
 
 .logo {
