--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -14,11 +14,13 @@
 .name,
 .subtitle {
   display: inline-block;
+  position: relative;
 }
 
 .name {
   animation: appear 1s var(--ease-in-out-quint);
   @apply --underlined-double;
+  color: white;
 
   @media (--mobile) {
     @apply --underlined;
